devsandbox-camel/lab/.camel-jbang-run/lab/target/kubernetes/openshift.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/vcs-uri: <<unknown>>
    app.quarkus.io/quarkus-version: 3.14.2
    app.quarkus.io/commit-id: 8a6538c71e66f6ec4ec794bee3448281c3a26da4
    app.quarkus.io/vcs-uri: https://github.com/RedHat-Middleware-Workshops/devsandbox-camel.git
    app.quarkus.io/build-timestamp: 2025-04-01 - 20:57:21 +0000
  labels:
    camel.apache.org/integration: lab
    app.kubernetes.io/runtime: camel
    app.kubernetes.io/managed-by: quarkus
    app.openshift.io/runtime: quarkus
    app.kubernetes.io/name: lab
    app.kubernetes.io/version: 1.0-SNAPSHOT
  name: lab
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    camel.apache.org/integration: lab
    app.kubernetes.io/name: lab
    app.kubernetes.io/version: 1.0-SNAPSHOT
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/vcs-uri: <<unknown>>
    app.quarkus.io/quarkus-version: 3.14.2
    app.quarkus.io/commit-id: 8a6538c71e66f6ec4ec794bee3448281c3a26da4
    app.quarkus.io/vcs-uri: https://github.com/RedHat-Middleware-Workshops/devsandbox-camel.git
    app.quarkus.io/build-timestamp: 2025-04-01 - 20:57:21 +0000
  labels:
    camel.apache.org/integration: lab
    app.kubernetes.io/runtime: camel
    app.kubernetes.io/managed-by: quarkus
    app.openshift.io/runtime: quarkus
    app.kubernetes.io/name: lab
    app.kubernetes.io/version: 1.0-SNAPSHOT
  name: lab
spec:
  selector:
    matchLabels:
      camel.apache.org/integration: lab
      app.kubernetes.io/name: lab
      app.kubernetes.io/version: 1.0-SNAPSHOT
  template:
    metadata:
      annotations:
        alpha.image.policy.openshift.io/resolve-names: '*'
        app.openshift.io/vcs-uri: <<unknown>>
        app.quarkus.io/quarkus-version: 3.14.2
        app.quarkus.io/commit-id: 8a6538c71e66f6ec4ec794bee3448281c3a26da4
        app.quarkus.io/vcs-uri: https://github.com/RedHat-Middleware-Workshops/devsandbox-camel.git
        app.quarkus.io/build-timestamp: 2025-04-01 - 20:57:21 +0000
      labels:
        camel.apache.org/integration: lab
        app.kubernetes.io/managed-by: quarkus
        app.openshift.io/runtime: quarkus
        app.kubernetes.io/name: lab
        app.kubernetes.io/version: 1.0-SNAPSHOT
    spec:
      containers:
        - env:
            - name: JAVA_APP_JAR
              value: /deployments/quarkus-run.jar
          image: lab:1.0-SNAPSHOT
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/live
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          name: lab
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/ready
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          startupProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/started
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/vcs-uri: <<unknown>>
    app.quarkus.io/quarkus-version: 3.14.2
    app.quarkus.io/commit-id: 8a6538c71e66f6ec4ec794bee3448281c3a26da4
    app.quarkus.io/vcs-uri: https://github.com/RedHat-Middleware-Workshops/devsandbox-camel.git
    app.quarkus.io/build-timestamp: 2025-04-01 - 20:57:21 +0000
  labels:
    app.kubernetes.io/managed-by: quarkus
    app.openshift.io/runtime: quarkus
    app.kubernetes.io/name: lab
    app.kubernetes.io/version: 1.0-SNAPSHOT
  name: lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: lab
      app.kubernetes.io/version: 1.0-SNAPSHOT
  template:
    metadata:
      annotations:
        alpha.image.policy.openshift.io/resolve-names: '*'
        app.openshift.io/vcs-uri: <<unknown>>
        app.quarkus.io/quarkus-version: 3.14.2
        app.quarkus.io/commit-id: 8a6538c71e66f6ec4ec794bee3448281c3a26da4
        app.quarkus.io/vcs-uri: https://github.com/RedHat-Middleware-Workshops/devsandbox-camel.git
        app.quarkus.io/build-timestamp: 2025-04-01 - 20:57:21 +0000
      labels:
        app.kubernetes.io/managed-by: quarkus
        app.openshift.io/runtime: quarkus
        app.kubernetes.io/name: lab
        app.kubernetes.io/version: 1.0-SNAPSHOT
    spec:
      containers:
        - env:
            - name: JAVA_APP_JAR
              value: /deployments/quarkus-run.jar
          image: lab:1.0-SNAPSHOT
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/live
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          name: lab
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/ready
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          startupProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/started
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.openshift.io/vcs-uri: <<unknown>>
    app.quarkus.io/quarkus-version: 3.14.2
    app.quarkus.io/commit-id: 8a6538c71e66f6ec4ec794bee3448281c3a26da4
    app.quarkus.io/vcs-uri: https://github.com/RedHat-Middleware-Workshops/devsandbox-camel.git
    app.quarkus.io/build-timestamp: 2025-04-01 - 20:57:21 +0000
  labels:
    app.kubernetes.io/managed-by: quarkus
    app.openshift.io/runtime: quarkus
    app.kubernetes.io/name: lab
    app.kubernetes.io/version: 1.0-SNAPSHOT
  name: lab
spec:
  port:
    targetPort: http
  tls:
    termination: edge
  to:
    kind: Service
    name: lab
